fixing too wide input fields

--- a/src/components/shared/Input/styles.css
+++ b/src/components/shared/Input/styles.css
@@ -7,6 +7,7 @@
   outline: none;
 
   transition: all 0.15s ease-in-out;
+  box-sizing: border-box;
 }
 
 .input:focus {
